--- a/Three/Properties/launchSettings.json
+++ b/Three/Properties/launchSettings.json
@@ -1,11 +1,12 @@
-﻿{
+{
+  "profiles": {
     "Three": {
-      "commandName": "Project",
-      "launchBrowser": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "commandName": "Project",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "launchBrowser": true
     }
   }
 }
