--- a/Three/Three.csproj
+++ b/Three/Three.csproj
@@ -8,4 +8,6 @@
     <PackageReference Include="BuildBundlerMinifier" Version="3.2.447" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties properties_4launchsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
